# ocr-dataset-rendering

./: .gitignore  .gitmodules  LICENSE  README.md  colab.ipynb  pyproject.toml  requirements.txt
src/: ambientcg_download.py  blender_render_samples_3d.py  bounding_box.py  bounding_box_math.py  calculate_bounding_boxes.py  font_download.py  font_rendering.py  generate_samples_2d.py  main.ipynb  main.py  polyhaven_download.py  postprocess.py  postprocess_util.py  prepare_data.py  shuffle_iter.py  test.ipynb
src/tests/: generate_test_data.py  test_font_rendering.py  test_postprocessing.py
